2021-05-01 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3215.c:
	  Fix condition for skipping test on host.

2021-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Another fix for #3220.

2021-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve handling of 32-Bit variables.

2021-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Do not use double pusp / pop for 16-bit load when optimizing for speed.

2021-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve ldir assignment heuristic for r3ka and ez80_z80: Fix bug #3220.

2021-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Small wide improvements.

2021-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3217.
	* src/z80/peep.c:
	  Fix instruction size for or hl, de and and hl, de.

2021-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a --reserve-regs-iy bug.

2021-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_mullong.c,
	  src/z80/main.c,
	  src/SDCCopt.c:
	  Improve Rabbit multiplication.
	* src/z80/gen.c:
	  Fix gbz80 part of bug #3217.

2021-04-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bitfields-bits1.c,
	  support/regression/tests/bitfields-checks.c,
	  support/regression/tests/bitfields-dead-loop.c:
	  Fix or disable host tests on hosts that allocate bitfields
	  in MSB to LSB order

2021-04-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bugs affecting z80 code generation for --reserve-regs-iy.

2021-04-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3216.c:
	  Fix bug #3216.

2021-04-23 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asxxsrc/asxxxx.h,
	  sdas/asxxsrc/asdata.c,
	  sdas/asxxsrc/asexpr.c,
	  sdas/asxxsrc/asmain.c:
	  Option to defer resolution of some symbols to link time, patch by Tony Pavlov.
	* src/SDCCopt.c,